fix(PDS-773): on mobile scrolling not working

--- a/packages/mobile-toaster/src/components/MobileToasterContainer/styles.module.scss
+++ b/packages/mobile-toaster/src/components/MobileToasterContainer/styles.module.scss
@@ -351,6 +351,12 @@ $theme-name: osThemeSnack;
 
         overflow-y: auto;
         overflow-x: hidden;
+
+        touch-action: pan-y;
+
+        & > * {
+          touch-action: auto;
+        }
       }
     }
   }
